[project]
name = "perfbench"
version = "0.1.0"
description = "MCP server for Granite benchmarking"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "mcp[cli]",
    "langchain>=0.3",
    "langchain-mcp-adapters>=0.1",
    "langgraph>=0.4",
    "langchain-ibm>=0.3",
    "langchain-ollama>=0.3",
    "streamlit>=1.30",
    "pandas>=2.0",
    "altair>=5.0",
]

[project.scripts]
perfbench = "perfbench.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/perfbench"]

[tool.ruff]
src = ["src"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
